--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">WeatherApplication</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">WeatherApp</string>
+    <string name="today">Today</string>
+    <string name="forecast">Forecast</string>
+    <string name="maps">Maps</string>
+    <string name="search">Search for a city...</string>
+
 </resources>
