--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="sunset">Sunset:</string>
     <string name="sunrise">Sunrise:</string>
     <string name="pressure">Pressure:</string>
+    <string name="min_temperature">Min temp</string>
+    <string name="max_temperature">Max temp</string>
 
 </resources>
